# bdf2c-in-awk

./: .appveyor.yml  .gitattributes  Cargo.toml  LICENSE  README.md  bdf2c.awk
src/: bdf_parser.rs  code_generator.rs  cp437_map.rs  main.rs  options.rs
tests/: ci-base-setup.sh  ci-check.sh  main.c
