[package]
name = "bdf2c"
version = "0.1.0"
edition = "2021"
authors = ["TK Chia"]
license = "MPL-2.0"
description = "Convert Adobe BDF font files to C source/header files"
repository = "https://github.com/tkchia/bdf2c-in-awk"

[[bin]]
name = "bdf2c"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"

[profile.release]
opt-level = 3
lto = true
strip = true
